# DataStructures

./: CMakeLists.txt  Doxyfile  array.c  array.h  buflist.c  doubly_linked_list.c  doubly_linked_list.h  readme.md
tests/: array_test.c  buflist_test.c  doubly_linked_list_test.c  main.c
